--- a/client/ecommerce/package.json
+++ b/client/ecommerce/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.5.1",
     "jspdf": "^1.5.3",
     "ngx-bootstrap": "^5.6.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
